Get Travis and Bikeshed to play nicely again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: python
 sudo: false
 python:
-  - "3.7"
+  - "3.8"
 
 install:
-  # Setup bikeshed. See https://tabatkins.github.io/bikeshed/#install-linux
+  # Setup bikeshed. See https://tabatkins.github.io/bikeshed/#travis-ci
   - git clone https://github.com/tabatkins/bikeshed.git
-  - pip install --editable $PWD/bikeshed
-  - bikeshed update
- 
+  - pip3 install bikeshed
+
 script:
   - bash ./deploy.sh
 
